@@ -1,6 +1,7 @@
 plyr 0.1.6 (2008-XX-XX) ---------------------------------------------------
 
 * use list names where present
+* failwith now accepts a function name, as well as a function itself
 
 plyr 0.1.5 (2008-02-23) ---------------------------------------------------
 
